--- a/views/calculator_app_page1.erb
+++ b/views/calculator_app_page1.erb
@@ -7,6 +7,7 @@
 <input type = "text" name = "password_input" required>
 <br><br>
 <input class = "button" type = "submit" value = "Log in" onclick>
+<%=error%>
 </form>
 </body>
 
