--- a/views/calculator_app_page1.erb
+++ b/views/calculator_app_page1.erb
@@ -1,3 +1,7 @@
+<div class="box_div">
+<head>
+	<link rel="stylesheet" type="text/css" href="/css/layout.css">
+</head>
 <body>
 <h1> Welcome! Please enter your username and password to begin. </h1>
 <form method = "post" action = "calculator_app_page1">
@@ -10,4 +14,5 @@
 <%=error%>
 </form>
 </body>
+</div>
 
