--- a/views/calculator_app_page2.erb
+++ b/views/calculator_app_page2.erb
@@ -1,3 +1,7 @@
+<div class="box_div">
+<head>
+	<link rel="stylesheet" type="text/css" href="/css/layout.css">
+</head>
 <body>
 <h1> Your login was successful! Next, please enter your first and last name. </h1>
 <form method = "post" action = "calculator_app_page2">
@@ -9,3 +13,4 @@
 <input class = "button" type = "submit" value = "Next" onclick>
 </form>
 </body>
+</div>
