--- a/views/calculator_app_page3.erb
+++ b/views/calculator_app_page3.erb
@@ -1,3 +1,7 @@
+<div class="box_div">
+<head>
+	<link rel="stylesheet" type="text/css" href="/css/layout.css">
+</head>
 <body>
 <h1> Thanks, <%=first_name_input%> <%=last_name_input%>! Now you can choose which two numbers you want to add, subtract, multiply, or divide. Which operation you choose is your choice.</h1>
 <form method = "post" action = "calculator_app_page3">
@@ -23,3 +27,4 @@
 <input class = "button" type = "submit" value = "Calculate" onclick>
 </form>
 </body>
+</div>
