--- a/views/calculator_app_final_page.erb
+++ b/views/calculator_app_final_page.erb
@@ -4,8 +4,8 @@
 </head>
 <body>
 <h1> Here are the results of the math operation that you chose, <%=first_name_input%> <%=last_name_input%>. <%=num1%> <%=math_operation%> <%=num2%> equals <%=result%>.</h1>
-<form method = "post" action = "calculator_app_final_page">
-<input class = "button" type = "submit" value = "Return to Calculator" onclick>
+<form method = "post" action = "play_again">
+<input class = "button" type = "submit" value = "Return to Calculator">
 </form>
 </body>
 </div>
