--- a/views/calculator_app_page1.erb
+++ b/views/calculator_app_page1.erb
@@ -8,9 +8,10 @@
 <h3> Username </h3>
 <input type = "text" name = "user_name_input" required autofocus>
 <h3> Password </h3>
-<input type = "text" name = "password_input" required>
+<input type = "password" name = "password_input" required>
 <br><br>
 <input class = "button" type = "submit" value = "Log in" onclick>
+<hr>
 <%=error%>
 </form>
 </body>
